chore: resolves upgrade issues, including updating entity initializer
Signed-off-by: Anthony D. Mays <anthony@morganlatimer.com>